@@ -41,8 +41,6 @@ DoSystematics False
 ElectronID LooseAndBLayerLH
 ElectronIDLoose TightLH
 ElectronPt 5000.
-#ElectronIsolation None
-ElectronIsoSFs False
 ElectronIsolation Loose
 ElectronIsolationLoose FixedCutTight
 
@@ -51,7 +49,6 @@ MuonQuality Loose
 MuonQualityLoose Loose
 MuonEta 2.7
 MuonPt 5000.
-#MuonIsolation None
 MuonIsolation Loose
 MuonIsolationLoose FixedCutTightTrackOnly
 
@@ -84,6 +81,7 @@ TRIGDEC HLT_mu20_iloose_L1MU15 HLT_mu26_imedium HLT_mu40 HLT_mu50 HLT_e24_lhmedi
 SELECTION loose
 INITIAL
 COUNTHISTO
+#NLEPTON 10000 >= 2
 JETCLEAN LooseBad
 #TRIGDEC HLT_mu26_imedium 
 #TRIGMATCH HLT_mu26_imedium 
