@@ -3,6 +3,7 @@
 	* strawman TTVA cuts
 	* flat tau SFs, bit superfluous with one tau...
 	* Selector that cuts on sum of electron and muon
+	* cleanup obsolete options in config, NLepton cut in Sys config
 
 2016-01-12 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
 	* included flags isPrompt, isBremsElec, and isFakeLep
